--- a/exam-system/src/main/resources/static/css/styles.css
+++ b/exam-system/src/main/resources/static/css/styles.css
@@ -6,7 +6,7 @@
 h1 {
     text-align: center;
     padding: 20px 0px;
-    background-color: #AD7858;
+    background-color: #006A92;
 }
 
 h2 {
@@ -32,8 +32,7 @@ table, tr, td, th {
     align-items: center;
     justify-content: center;
     gap: 30px;
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20210902/pngtree-countdown-to-the-college-entrance-examination-image_790187.jpg");
-    background-repeat: no-repeat;
+    background-image: url("../assets/home-background.jpg");
     background-size: 100% 100%;
 }
 
@@ -46,16 +45,17 @@ input, select {
 }
 
 #align-btns > button {
-    width: 180px;
-    height: 30px;
-    background-color: #c48764;
-    border: 2px solid saddlebrown;
+    width: 240px;
+    height: 40px;
+    background-color: #006A92;
+    border: 2px solid black;
     font-weight: 600;
+    text-transform: uppercase;
 }
 
 #align-btns > button:hover {
-    background-color: #e5a983;
-    box-shadow: 2px 2px 2px #edbb9d;
+    background-color: #45d4ff;
+    box-shadow: 2px 2px 2px #0EA7D6;
 }
 
 #outer {
@@ -228,6 +228,22 @@ th {
     background-color: green;
 }
 
+#yellow-btn  {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    color: white;
+    background-color: rgb(186, 210, 0);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: sans-serif;
+}
+
+#yellow-btn:hover {
+    background-color: yellow;
+}
+
 #red-btn {
     text-transform: uppercase;
     font-weight: bold;
@@ -275,17 +291,22 @@ th {
 }
 
 #total-flex {
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     position: absolute;
 }
 
 #aside1, #aside2 {
-    margin-left: 100px;
+    margin-left: 20px;
+    position: absolute;
+}
+
+#aside1 {
+    margin-top: 50px;
 }
 
 
-#logout-faculty {
+/* #delete-popup {
     border: 2px solid black;
     border-radius: 5px;
     width: 200px;
@@ -297,9 +318,37 @@ th {
     animation-duration: 1s;
     animation-timing-function: ease;
     display: none;
+}  */
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 99;
 }
 
-#logout-faculty #first-btn, #logout-faculty p {
+#logout-faculty, #delete-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 250px;
+    height: 150px;
+    text-align: center;
+    background-color: white;
+    display: none;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+#logout-faculty #first-btn, #logout-faculty p, #delete-popup #first-btn, #delete-popup p {
     margin: 7px;
     margin-top: 15px;
     /* margin-bottom: 0px; */
@@ -315,6 +364,10 @@ span {
     font-weight: 700;
     text-transform: uppercase;
 } */
+
+th {
+    text-align: center;
+}
 
 #space-apply {
     width: 60%;
